--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "main": "main.js",
   "dependencies": {
     "discord.js": "^11.5.1",
-    "node-fetch": "^2.6.0"
+    "get-youtube-id": "^1.0.1",
+    "get-youtube-playlist-id": "0.0.1",
+    "node-fetch": "^2.6.0",
+    "request": "^2.88.0",
+    "youtube-info": "^1.3.2",
+    "youtube-playlist-info": "^1.1.2",
+    "ytdl-core": "^1.0.0"
   },
   "devDependencies": {},
   "scripts": {
