--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "cryptiles": "^4.1.3",
     "discord.js": "^11.5.1",
     "get-youtube-id": "^1.0.1",
     "get-youtube-playlist-id": "0.0.1",
+    "hoek": "^6.1.3",
+    "lodash": "^4.17.15",
     "node-fetch": "^2.6.0",
     "request": "^2.88.0",
     "youtube-info": "^1.3.2",
